--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -191,12 +191,12 @@ const posts = (await getCollection("blog"))
         const postsList = document.getElementById("postsList")!;
         const allPosts = Array.from(postsList.children) as HTMLDivElement[];
 
-        searchInput.addEventListener("input", (e) => {
+        searchInput.addEventListener("input", () => {
             const searchTerm = searchInput.value.toLowerCase().trim();
 
             allPosts.forEach((post) => {
-                const title = post.querySelector(".title")?.textContent.toLowerCase() ?? "";
-                if (searchTerm === "" || title?.includes(searchTerm)) {
+                const title = post.querySelector(".title")?.textContent ?? "";
+                if (searchTerm === "" || title.includes(searchTerm)) {
                     post.style.display = "block";
                 } else {
                     post.style.display = "none";
