--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -6,6 +6,9 @@ import { SITE_TITLE, TEAM_MEMBERS } from "../../consts";
 import { useTranslations, getLangFromUrl } from "../../i18n/translate";
 import Values from "../../components/Values.astro";
 import Purpose from "../../components/Purpose.astro";
+
+export const prerender = true;
+
 export function getStaticPaths() {
     return [
         {
