--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -48,6 +48,15 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                         description={TEAM_MEMBERS.Juan.description}
                     />
                     <CardFounder
+                        name={TEAM_MEMBERS.Ezequiel.fullName}
+                        image={TEAM_MEMBERS.Ezequiel.logo}
+                        github={TEAM_MEMBERS.Ezequiel.gitHub}
+                        linkedin={TEAM_MEMBERS.Ezequiel.linkedin}
+                        link={TEAM_MEMBERS.Ezequiel.link}
+                        profession={TEAM_MEMBERS.Ezequiel.profession}
+                        description={TEAM_MEMBERS.Ezequiel.description}
+                    />
+                    <CardFounder
                         name={TEAM_MEMBERS.Leandro.fullname}
                         image={TEAM_MEMBERS.Leandro.logo}
                         github={TEAM_MEMBERS.Leandro.gitHub}
