--- a/src/pages/[lang]/founders/[...slug].astro
+++ b/src/pages/[lang]/founders/[...slug].astro
@@ -2,6 +2,8 @@
 import { type CollectionEntry, getCollection } from "astro:content";
 import FounderLayout from "../../../layouts/FounderLayout.astro";
 
+export const prerender = true;
+
 export async function getStaticPaths() {
     const posts = await getCollection("founder");
 
